version 3.0.0.5 scrollbar bugfix

--- a/src/app/my-projects-section/my-projects-section.component.scss
+++ b/src/app/my-projects-section/my-projects-section.component.scss
@@ -76,6 +76,9 @@
 .my-projects-section-buttons {
     display: flex;
     gap: 24px;
+    button{
+        border: none;
+    }
 
     #github-btn a {
         width: 125px;
