--- a/src/app/my-skills-section/my-skills-section.component.scss
+++ b/src/app/my-skills-section/my-skills-section.component.scss
@@ -43,6 +43,7 @@
         line-height: 21.6px;
         font-weight: 500;
         cursor: pointer;
+        border: none;
 
         &:hover {
             transition: color 0.125s ease-in-out;
