--- a/src/app/why-me-section/why-me-section.component.media.scss
+++ b/src/app/why-me-section/why-me-section.component.media.scss
@@ -141,7 +141,7 @@
 
 @media screen and (max-width: 700px) {
     .why-me-section-infos {
-        width: 95%;
+        width: 85%;
     }
 }
 
