--- a/src/app/why-me-section/why-me-section.component.scss
+++ b/src/app/why-me-section/why-me-section.component.scss
@@ -14,8 +14,7 @@
 .why-me-section-infos {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    /* width: 35%; */
+    gap: 20px;    
     width: 62%;
 }
 
@@ -163,7 +162,7 @@
         line-height: 21.6px;
         font-weight: 500;
         cursor: pointer;
-
+        border: none;
         &:hover {
             transition: color 0.125s ease-in-out;
             color: #E15544;
